--- a/src/assets/style/index.styl
+++ b/src/assets/style/index.styl
@@ -1,17 +1,26 @@
 @import 'system'
 
 .index
-	text-align center
-	margin auto
-	img
-		width 200px
-		height auto
-	.btn
-		display: block
-		text-align: center
-	a
-		color default_color
-		text-decoration none
-		font-family: default_font
-		&:hover
-			color primary_color
+  text-align center
+  margin auto
+
+  img 
+    padding 200px 0 0 0 
+    width 280px
+    height 280px
+
+  .input
+    width 150px
+    margin auto
+
+  a
+    color default_color
+    text-decoration none
+  a:hover
+    color primary_color
+
+  
+
+
+
+
